wrote basic html / css

--- a/index.html
+++ b/index.html
@@ -11,10 +11,27 @@
     />
     <script src="./app.js" defer></script>
   </head>
+
   <body>
+
+
+
     <div id="app">
-      
+      <div id="show-tasks">
+        <ul id="list-of-tasks">
+          <li class="task-classic" id="#"> <span class="task-name"> Task name </span> <span class="task-delete"> delete-icon </span> </li>
+          <li class="task-classic" id="#"> <span class="task-name"> Task name </span> <span class="task-delete"> delete-icon </span> </li>
+        </ul>
+      </div>
+      <div id="add-tasks">
+        <input type="text" id="add-task" placeholder="Add task" maxlength="20">
+      </div>
     </div>
+
+
+
+
+
 
   </body>
 </html>
