--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
     <div id="app">
       <div id="show-tasks">
         <ul id="list-of-tasks">
+          
+
+<!-- TEMPLATE 
           <li class="task-classic task-not-finished" id="#" title="click to finish or unfinish task"> <span class="task-name"> Unfinished task </span> <span class="task-delete"> <i class="fa fa-trash-o delete-icon" title="delete task"></i> </span> </li>
+
           <li class="task-classic task-finished" id="#" title="click to finish or unfinish task"> <span class="task-name"> Finished task </span> <span class="task-delete"> <i class="fa fa-trash-o delete-icon" title="delete task"></i> </span> </li>
+-->
         </ul>
       </div>
       <div id="add-tasks">
