--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script type="module" src="./main.js" defer></script>
   </head>
 
   <body>
@@ -42,6 +43,4 @@
 
 
   </body>
-  <script type="module" src="./addTaskToDom.module.js"></script>
-  <script src="./main.js"></script>
 </html>
