--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Todo app</title>
   <link rel="stylesheet" type="text/css" href="./style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- <script src="./main.js" defer></script> -->
+   <script src="./main.js" defer></script> 
 </head>
 
 <body>
@@ -19,13 +19,15 @@
 
 
     <!-- OUTPUT PART-->
-    <ul>
+    <ul id="list">
+      <!--
         <li class="item" id="#">
           <div class="w-80 finished-false">
            <span class="name">Unfinished task</span></div><div class="w-20">
             <i class="icon fa fa-trash-o"></i>
           </div>
         </li>
+        -->
     </ul>
 
 
@@ -34,8 +36,6 @@
 
 
   </div>
-
-
 
 
 
